[package]
name = "ddog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
sync = ["ureq"]
async = ["hyper", "hyper-util/client-legacy", "hyper-util/http1", "hyper-util/tokio", "rustls", "hyper-rustls", "futures", "webpki-roots"]

[dependencies]
futures = { version = "0.3.21", optional = true }
hyper = { version = "1.0", features = ["client"], optional = true }
hyper-rustls = { version = "0.26.0", optional = true }
hyper-util = { version = "0.1.2", features = ["client-legacy", "http1", "tokio"], optional = true }
once_cell = "1"
regex = { version = "1" }
# This needs to be aligned with hyper-rustls, make sure we don't end up with two copies if we update either.
rustls = { version = "0.22.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ureq = { version = "2.9.7", features = ["json"], optional = true }
webpki-roots = { version = "0.26", optional = true }
