[package]
name = "ddog"
version = "1.0.0"
edition = "2018"
publish = ["lookback"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
sync = ["ureq"]
async = ["hyper", "hyper-util/client-legacy", "hyper-util/http1", "hyper-util/tokio", "rustls", "hyper-rustls", "futures", "webpki-roots"]

[dependencies]
futures = { version = "0.3.21", optional = true }
hyper = { version = "1.0", features = ["client"], optional = true }
hyper-rustls = { version = "0.27.0", optional = true, default-features = false, features = ["http1", "logging", "native-tokio", "tls12"] }
hyper-util = { version = "0.1.5", features = ["client-legacy", "http1", "tokio"], optional = true }
once_cell = "1"
regex = { version = "1" }
# This needs to be aligned with hyper-rustls, make sure we don't end up with two copies if we update either.
rustls = { version = "0.23.0", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ureq = { version = "2.9.7", features = ["json"], optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
# Need to specify ring for tests to work
rustls = { version = "0.23.0", features = ["ring"], default-features = false }
